# Noosphere

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  package.json
.github/workflows/: ci.yml  deploy-pages.yml
docs/plans/: 200k-vocab-bloom-comparison-analogy-controls.md  3d-embedding-space-foundation.md  always-visible-embed-option.md  bias-colored-neighbor-lines.md  distance-legend-scale-bar.md  fix-faiss-neighbor-mappings-filtered-spaces.md  fix-qwen-space-click-blocking.md  fly-controls-fog-fix.md  interactive-embedding-features.md  multi-space-server-disable-local-fallback.md  rendering-scaling-enhancements.md  search-ux-persistent-embeds.md
pipeline/: build_space.py  export_embeddings.py  filter_space.py  pyproject.toml  rebuild_faiss.py
pipeline/data/: vocab_config.json
pipeline/data/sources/: curated_concepts.txt
pipeline/scripts/: fetch_vocab_sources.py
pipeline/src/: cluster.py  download_sources.py  embed.py  export_embeddings.py  faiss_index.py  package.py  parametric.py  reduce.py  types.py  vocab.py
server/: pyproject.toml
server/app/: engine.py  main.py  models.py  routes.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/spaces/: index.json  minilm-10k-embeddings.json  minilm-10k.parampacmap.pt  minilm-10k.parampacmap.pt.sha256
web/src/: App.tsx
web/src/components/: AnalogyMarkers.tsx  AnalogyPanel.tsx  BiasLines.tsx  BiasProbePanel.tsx  BookmarkRestore.tsx  Breadcrumbs.tsx  CameraAnimator.tsx  CameraLight.tsx  ClusterFog.tsx  ClusterLabels.tsx  ComparisonMarkers.tsx  ComparisonPanel.tsx  ControlModeToggle.tsx  ControlsHint.tsx  DistanceLegend.tsx  DistanceRings.tsx  ErrorBoundary.tsx  FlyControls.tsx  InfoPanel.tsx  IntroAnimation.tsx  LoadingScreen.tsx  ModeToggle.tsx  NeighborLines.tsx  PointCloud.tsx  PointLabel.tsx  PrecisionToggle.tsx  ProjectedMarker.tsx  RectangleSelector.tsx  ScrollZoom.tsx  (+6 more)
(+13 files in other folders)
