[project]
name = "noosphere-pipeline"
version = "0.1.0"
description = "Space generation pipeline for Noosphere — 3D embedding space visualization"
requires-python = ">=3.11,<3.12"
dependencies = [
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "pacmap>=0.7.3,<0.8",
    "umap-learn>=0.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "parampacmap[mps]",
    "faiss-cpu>=1.13.2",
    "nltk>=3.8.0",
    "openai>=1.0.0",
]

[project.scripts]
build-space = "build_space:main"

[tool.uv.sources]
parampacmap = { git = "https://github.com/hyhuang00/ParamRepulsor.git", rev = "be8df72b1ac9041be3aae3d99f16f0d392b492dc" }
