[project]
name = "noosphere-server"
version = "0.1.0"
description = "FastAPI backend for Noosphere — real-time embedding, neighbors, bias probing"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sentence-transformers>=2.7.0",
    "torch>=2.0.0",
    "faiss-cpu>=1.13.2",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "parampacmap[mps]",
]

[project.scripts]
serve = "app.main:run"

[tool.uv.sources]
parampacmap = { git = "https://github.com/hyhuang00/ParamRepulsor.git", rev = "be8df72b1ac9041be3aae3d99f16f0d392b492dc" }
